trunk/Archive2/5f/d8e2d05a9dda6c/output
main.cpp: In function 'int main()':
main.cpp:12:15: error: cannot convert 'float*' to 'char*' in initialization
     char *j = f;
               ^
main.cpp:12:11: warning: unused variable 'j' [-Wunused-variable]
     char *j = f;
           ^
