trunk/Archive2/5f/d8e2d05a9dda6c/main.cpp

#include <vector>
#include <list>
#include <iostream>
#include <utility>


int main()
{
    float *f;
    //int &i = f;
    char *j = f;
    

}